<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/cblin"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" > 
        <CheckBox
        	android:id="@+id/cb"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:focusable="false"
        	android:focusableInTouchMode="false"
        	android:clickable="false"
        	android:checkMark="?android:attr/listChoiceIndicatorMultiple"/>
   	</LinearLayout> 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="客户"
                android:textSize="@dimen/btnSize" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15300000"
                android:textSize="@dimen/btnSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padBtnTop"
            android:paddingTop="@dimen/padBtnTop" >

            <Button
                android:id="@+id/btn_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textSize="@dimen/btnSize" />

            <Button
                android:id="@+id/btn_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/message"
                android:textSize="@dimen/btnSize" />

            <Button
                android:id="@+id/btn_fastCollection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fastCollection"
                android:textSize="@dimen/btnSize" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>