<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weiwhite"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/login_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_top"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_top"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_middle_height"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_middle_margin"
                android:layout_marginRight="@dimen/login_middle_margin"
                android:background="@drawable/jigouhao" />

            <EditText
                android:id="@+id/compnum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_compnum"
                android:maxLength="8"
                android:textColor="@color/black"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/weiwhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_middle_height"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_middle_margin"
                android:layout_marginRight="@dimen/login_middle_margin"
                android:background="@drawable/username" />

            <EditText
                android:id="@+id/worknumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_worknumber"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/weiwhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_middle_height"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_middle_margin"
                android:layout_marginRight="@dimen/login_middle_margin"
                android:background="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/weiwhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_middle_height"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/login_savepass"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="@dimen/shidp"
                    android:drawingCacheQuality="high"
                    android:text="@string/login_savepass"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeNormal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/login_autologin"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="@dimen/shidp"
                    android:drawingCacheQuality="high"
                    android:text="@string/login_auto"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeNormal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/login_middle"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_middle_margin"
            android:background="@drawable/selector_btn_big"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/login_button_txtsize" />
         <Button
            android:id="@+id/btn_bundling_orgcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_middle_margin"
            android:layout_marginRight="@dimen/login_middle_margin"
            android:background="@drawable/selector_btn_bundling"
            android:text="绑定机构"
            android:textColor="@color/white"
            android:textSize="@dimen/login_button_txtsize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeSamll" />

</RelativeLayout>